--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "leaflet-easybutton": "^2.4.0",
     "leaflet-geosearch": "^3.10.2",
     "leaflet.locatecontrol": "^0.79.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
@@ -30,6 +31,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "npm run build && firebase deploy",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
