--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "leaflet.locatecontrol": "^0.79.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
